# redis-rust-rest

./: Cargo.toml
src/: main.rs
src/common/: error.rs  error_handler.rs  mod.rs
src/config/: config.rs
src/database/: mod.rs
src/database/mongodb/: client.rs  model.rs
src/logger/: mod.rs  tracing.rs
