[package]
name = "redis-rust-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-http = "3.4.0"
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
serde_derive = "1.0.189"
config = "0.13.3"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
uuid = {version = "1.4.1", features = ["v4"]}
redis = "0.23.3"
bson = { version = "2.7.0", features = ["serde_with", "chrono-0_4"] }
mongodb = "2.7.0"
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = [] }
tokio = "1.33.0"
lazy_static = "1.4.0"
wither = "0.9.0"
async-trait = "0.1.73"
futures = "0.3.28"
bcrypt = "0.15.0"
thiserror = "1.0.49"
validator = "0.16.1"

